--- a/Paper/references.bib
+++ b/Paper/references.bib
@@ -8,6 +8,45 @@
   year={2016},
   publisher={ACM}
 }
+@inproceedings{lazik2015alps,
+  title={ALPS: A bluetooth and ultrasound platform for mapping and localization},
+  author={Lazik, Patrick and Rajagopal, Niranjini and Shih, Oliver and Sinopoli, Bruno and Rowe, Anthony},
+  booktitle={Proceedings of the 13th ACM Conference on Embedded Networked Sensor Systems},
+  pages={73--84},
+  year={2015},
+  organization={ACM}
+}
+@article{Remya2016zc,
+  title={An Efficient Zadoff-Chu Based Communication System},
+  author={Remya B, Ashish Francis, Vimal Raj V},
+  journal={International Journal of Innovative Research in Electrical, Electronics, Instrumentation and Control Engineering},
+  volume={4},
+  number={9},
+  year={2016}
+}
+@article{anjana2015experimental,
+  title={An experimental study on channel estimation and synchronization to reduce error rate in OFDM using GNU radio},
+  author={Anjana, C and Sundaresan, S and Zacharia, Tessy and Gandhiraj, R and Soman, KP},
+  journal={Procedia Computer Science},
+  volume={46},
+  pages={1056--1063},
+  year={2015},
+  publisher={Elsevier}
+}
+@inproceedings{piccinni2016improved,
+  title={An improved technique based on Zadoff-Chu sequences for distance measurements},
+  author={Piccinni, G and Avitabile, G and Coviello, G},
+  booktitle={Radio and Antenna Days of the Indian Ocean (RADIO), 2016 IEEE},
+  pages={1--2},
+  year={2016},
+  organization={IEEE}
+}
+@misc{edfors1997introduction,
+  title={An introduction to orthogonal frequency-division multiplexing},
+  author={Edfors, Ove and Sandell, Magnus and Beek, Jaap van de and Landstr{\""o}m, Daniel and Sj{\""o}berg, Frank},
+  year={1997},
+  publisher={Lule{\aa} tekniska universitet}
+}
 @article{segers2015ultrasonic,
   title={An ultrasonic multiple-access ranging core based on frequency shift keying towards indoor localization},
   author={Segers, Laurent and Van Bavegem, David and De Winne, Sam and Braeken, An and Touhafi, Abdellah and Steenhaut, Kris},
@@ -17,6 +56,33 @@
   pages={18641--18665},
   year={2015},
   publisher={Multidisciplinary Digital Publishing Institute}
+}
+@article{hua2014analysis,
+  title={Analysis of the frequency offset effect on Zadoff--Chu sequence timing performance},
+  author={Hua, Min and Wang, Mao and Yang, Kristo Wenjie and Zou, Kingsley Jun},
+  journal={IEEE Transactions on Communications},
+  volume={62},
+  number={11},
+  pages={4024--4039},
+  year={2014},
+  publisher={IEEE}
+}
+@article{blumenstein2018coarse,
+  title={Coarse Time Synchronization Utilizing Symmetric Properties of Zadoff-Chu Sequences},
+  author={Blumenstein, Jiri and Bobula, Marek},
+  journal={IEEE Communications Letters},
+  year={2018},
+  publisher={IEEE}
+}
+@article{chen2010composite,
+  title={Composite interpolated fast Fourier transform with the Hanning window},
+  author={Chen, Kui Fu and Mei, Shu Li},
+  journal={IEEE Transactions on Instrumentation and Measurement},
+  volume={59},
+  number={6},
+  pages={1571--1579},
+  year={2010},
+  publisher={IEEE}
 }
 @article{wu2013csi,
   title={CSI-based indoor localization},
@@ -38,24 +104,45 @@
   year={2007},
   publisher={Wiley Online Library}
 }
-@article{dondo2014distributed,
-  title={Distributed FPGA-based architecture to support indoor localisation and orientation services},
-  author={Dondo, Julio and Villanueva, Felix and Garcia, David and Vallejo, David and Glez-Morcillo, Carlos and Lopez, Juan Carlos},
-  journal={Journal of Network and Computer Applications},
-  volume={45},
-  pages={181--190},
-  year={2014},
-  publisher={Elsevier}
+@article{yoo2009fast,
+  title={Fast normalized cross-correlation},
+  author={Yoo, Jae-Chern and Han, Tae Hee},
+  journal={Circuits, systems and signal processing},
+  volume={28},
+  number={6},
+  pages={819},
+  year={2009},
+  publisher={Springer}
 }
-@article{bras2013evaluation,
-  title={Evaluation of a sectorised antenna in an indoor localisation system},
-  author={Br{\'a}s, Luis and Pinho, Pedro and Carvaloh, Nuno Borges},
-  journal={IET Microwaves, Antennas \& Propagation},
-  volume={7},
-  number={8},
-  pages={679--685},
+@article{barshan2000fast,
+  title={Fast processing techniques for accurate ultrasonic range measurements},
+  author={Barshan, Billur},
+  journal={Measurement Science and technology},
+  volume={11},
+  number={1},
+  pages={45},
+  year={2000},
+  publisher={IOP Publishing}
+}
+@article{priya2013frequency,
+  title={Frequency synchronization in OFDM system},
+  author={Priya, C Geetha and Vasumathi, AM},
+  journal={Journal of signal and Information Processing},
+  volume={4},
+  number={03},
+  pages={138},
   year={2013},
-  publisher={IET}
+  publisher={Scientific Research Publishing}
+}
+@article{kang2012generalized,
+  title={Generalized cross-correlation properties of Chu sequences},
+  author={Kang, Jae Won and Whang, Younghoon and Ko, Byung Hoon and Kim, Kwang Soon},
+  journal={IEEE Transactions on Information Theory},
+  volume={58},
+  number={1},
+  pages={438--444},
+  year={2012},
+  publisher={IEEE}
 }
 @article{shu2016gradient,
   title={Gradient-based fingerprinting for indoor localization and tracking},
@@ -67,15 +154,13 @@
   year={2016},
   publisher={IEEE}
 }
-@article{varshavsky2007gsm,
-  title={GSM indoor localization},
-  author={Varshavsky, Alex and De Lara, Eyal and Hightower, Jeffrey and LaMarca, Anthony and Otsason, Veljo},
-  journal={Pervasive and Mobile Computing},
-  volume={3},
-  number={6},
-  pages={698--720},
-  year={2007},
-  publisher={Elsevier}
+@article{hammersound,
+  title={Sound Based Localization System for Safety Applications in Underground Mining},
+  author={Hammer, F and Pichler, M and Hesch, C}
+}
+@article{shukurimplementing,
+  title={Implementing Primary Synchronization Channel in Mobile Cell Selection 4G LTE-A Network},
+  author={Shukur, Murtadha Ali Nsaif and Pahwa, Kuldip and Sinha, HP}
 }
 @article{piontek2007improving,
   title={Improving the accuracy of ultrasound-based localisation systems},
@@ -105,43 +190,22 @@
   year={2016},
   publisher={Hindawi Publishing Corporation}
 }
-@article{ros2012indoor,
-  title={Indoor localisation using a context-aware dynamic position tracking model},
-  author={Ros, Montserrat and Boom, Joshua and de Hosson, Gavin and D'Souza, Matthew},
-  journal={International Journal of Navigation and Observation},
-  volume={2012},
+@article{bahillo2009indoor,
+  title={Indoor location based on IEEE 802.11 round-trip time measurements with two-step NLOS mitigation},
+  author={Bahillo Martinez, Alfonso and Mazuelas Franco, Santiago and Prieto Tejedor, Javier and Lorenzo Toledo, Ruben Mateo and Fernandez Reguero, Patricia and Abril, Evaristo Jose},
+  journal={Progress In Electromagnetics Research},
+  volume={15},
+  pages={285--306},
+  year={2009},
+  publisher={EMW Publishing}
+}
+@inproceedings{lazik2012indoor,
+  title={Indoor pseudo-ranging of mobile devices using ultrasonic chirps},
+  author={Lazik, Patrick and Rowe, Anthony},
+  booktitle={Proceedings of the 10th ACM Conference on Embedded Network Sensor Systems},
+  pages={99--112},
   year={2012},
-  publisher={Hindawi Publishing Corporation}
-}
-@article{robles2014indoor,
-  title={Indoor localization based on wireless sensor networks},
-  author={Robles, Jorge Juan},
-  journal={AEU-International Journal of Electronics and Communications},
-  volume={68},
-  number={7},
-  pages={578--580},
-  year={2014},
-  publisher={Elsevier}
-}
-@article{girard2011indoor,
-  title={Indoor pedestrian navigation using foot-mounted IMU and portable ultrasound range sensors},
-  author={Girard, Gabriel and C{\^o}t{\'e}, St{\'e}phane and Zlatanova, Sisi and Barette, Yannick and St-Pierre, Johanne and Van Oosterom, Peter},
-  journal={Sensors},
-  volume={11},
-  number={8},
-  pages={7606--7624},
-  year={2011},
-  publisher={Molecular Diversity Preservation International}
-}
-@article{li2016intelligent,
-  title={Intelligent fusion of information derived from received signal strength and inertial measurements for indoor wireless localization},
-  author={Li, Li and Yang, Wang and Wang, Guojun},
-  journal={AEU-International Journal of Electronics and Communications},
-  volume={70},
-  number={9},
-  pages={1105--1113},
-  year={2016},
-  publisher={Elsevier}
+  organization={ACM}
 }
 @inproceedings{ens2014low,
   title={Low-power simplex ultrasound communication for indoor localization},
@@ -150,6 +214,13 @@
   pages={731--735},
   year={2014},
   organization={IEEE}
+}
+@book{oliphant2006guide,
+  title={A guide to NumPy},
+  author={Oliphant, Travis E},
+  volume={1},
+  year={2006},
+  publisher={Trelgol Publishing USA}
 }
 @article{lymberopoulos2015microsoft,
   title={Microsoft indoor localization competition: Experiences and lessons learned},
@@ -161,24 +232,33 @@
   year={2015},
   publisher={ACM}
 }
-@article{hollosi2016monocular,
-  title={Monocular indoor localization techniques for smartphones},
-  author={Holl{\'o}si, Gergely and Lukovszki, Csaba and Moldov{\'a}n, Istv{\'a}n and Pl{\'o}sz, S{\'a}ndor and Harasztos, Frigyes},
-  journal={Acta Universitatis Sapientiae, Informatica},
-  volume={8},
-  number={2},
-  pages={186--215},
-  year={2016}
+@article{pereztdoa,
+  title={TDoA-based Localization Using Enhanced Multilateration},
+  author={Perez-Cruz, Fernando and Lin, Chih-Kuang and Huang, Howard}
 }
-@article{dai2016multi,
-  title={Multi-layer neural network for received signal strength-based indoor localisation},
-  author={Dai, Huan and Ying, Wen-hao and Xu, Jiang},
-  journal={IET Communications},
-  volume={10},
-  number={6},
-  pages={717--723},
-  year={2016},
-  publisher={IET}
+@article{remyaofdm,
+  title={OFDM Systems Using ZC Sequences},
+  author={Remya, B and Francis, Ashish}
+}
+@article{minn2000timing,
+  title={On timing offset estimation for OFDM systems},
+  author={Minn, Hlaing and Zeng, Mao and Bhargava, Vijay K},
+  journal={IEEE Communications letters},
+  volume={4},
+  number={7},
+  pages={242--244},
+  year={2000},
+  publisher={IEEE}
+}
+@article{khyam2017orthogonal,
+  title={Orthogonal Chirp-Based Ultrasonic Positioning},
+  author={Khyam, Mohammad Omar and Ge, Shuzhi Sam and Li, Xinde and Pickering, Mark},
+  journal={Sensors},
+  volume={17},
+  number={5},
+  pages={976},
+  year={2017},
+  publisher={Multidisciplinary Digital Publishing Institute}
 }
 @article{xu2011performance,
   title={Performance of time-difference-of-arrival ultra wideband indoor localisation},
@@ -186,233 +266,43 @@
   journal={IET science, measurement \& technology},
   volume={5},
   number={2},
-  pages={46--"
-@article{chen2014precise,
-  title={Precise indoor localisation technology based on TR-FMM},
-  author={Chen, Guoping and Wang, Li},
-  journal={Electronics Letters},
-  volume={50},
-  number={17},
-  pages={1248--1250},
-  year={2014},
-  publisher={IET"
-@inproceedings{runge2011precise,
-  title={Precise self-calibration of ultrasound based indoor localization systems},
-  author={Runge, Armin and Baunach, Marcel and Kolla, Reiner},
-  booktitle={Indoor Positioning and Indoor Navigation (IPIN), 2011 Inter"
-@article{haque2015profiling,
-  title={Profiling-based indoor localization schemes},
-  author={Haque, Israat Tanzeena and Assi, Chadi},
-  journal={IEEE Systems Journal},
-  volume={9},
-  number={1},
-  pages={76--85},
-  year={2015},
-  publisher={IEEE"
-@inproceedings{sainjeon2016real,
-  title={Real-Time Indoor Localization in Smart Homes Using Ultrasound Technology},
-  author={Sainjeon, Florian and Gaboury, S{\'e}bastien and Bouchard, Bruno},
-  booktitle={Proceedings of the 9th ACM International Conf"
-@article{kong2015robust,
-  title={Robust wireless signal indoor localization},
-  author={Kong, Liang and Bauer, Gavin and Hale, John},
-  journal={Concurrency and Computation: Practice and Experience},
-  volume={27},
-  number={11},
-  pages={2839--285"
-@article{zhang2013tdoa,
-  title={TDOA-based localization using interacting multiple model estimator and ultrasonic transmitter/receiver},
-  author={Zhang, Rui and Hoflinger, Fabian and Reindl, Leonhard},
-  journal={IEEE Transactions on Instrumentation "
-@article{mizutani2011tsat,
-  title={TSaT-MUSIC: a novel algorithm for rapid and accurate ultrasonic 3D localization},
-  author={Mizutani, Kyohei and Ito, Toshio and Sugimoto, Masanori and Hashizume, Hiromichi},
-  journal={EURASIP Journal on Advances in Signal Processing},
-  volume={2011},
-  number={1},
-  pages={101},
-  year={2011},
-  publisher={Springer}
+  pages={46}
 }
-@inproceedings{hsiao2008two,
-  title={Two practical considerations of beacon deployment for ultrasound-based indoor localization systems},
-  author={Hsiao, Chun-Chieh and Huang, Polly},
-  booktitle={Sensor Networks, Ubiquitous and Trustworthy Computing"
-@article{segers2014ultrasonic,
-  title={Ultrasonic multiple-access ranging system using spread spectrum and MEMS technology for indoor localization},
-  author={Segers, Laurent and Tiete, Jelmer and Braeken, An and Touhafi, Abdellah},
-  journal={Sensors"
-@article{onalaja2014ultra,
-  title={Ultra-wideband-based multilateration technique for indoor localisation},
-  author={Onalaja, Oladimeji and Adjrad, Mounir and Ghavami, Mohammad},
-  journal={IET Communications},
-  volume={8},
-  number={10},
-  pages"
-@article{huang2016wearable,
-  title={Wearable indoor localisation approach in Internet of Things},
-  author={Huang, Haojun and Zhou, Jianguo and Li, Wei and Zhang, Juanbao and Zhang, Xu and Hou, Guolin},
-  journal={IET Networks},
-  volume={5},
-  numb"
-@article{wu2013will,
-  title={WILL: Wireless indoor localization without site survey},
-  author={Wu, Chenshu and Yang, Zheng and Liu, Yunhao and Xi, Wei},
-  journal={IEEE Transactions on Parallel and Distributed Systems},
-  volume={24},
-  number={4},"
-@article{pereztdoa,
-  title={TDoA-based Localization Using Enhanced Multilateration},
-  author={Perez-Cruz, Fernando and Lin, Chih-Kuang and Huang, Howard}
-}
-@article{wangaidloc,
-  title={AIDLOC: AN ACCURATE ACOUSTIC INDOOR LOCALIZATION SYSTEM},
-  author={Wang, Zhi and Zhang, Lei and Lin, Feng and Huang, Danjie and Huang, Yifan}
-}
-@article{hammersound,
-  title={Sound Based Localization System for Safety Applications in Underground Mining},
-  author={Hammer, F and Pichler, M and Hesch, C}
-}
-@inproceedings{balcan2008alternatives,
-  title={Alternatives to the discrete Fourier transform},
-  author={Balcan, Doru and Sandryhaila, Aliaksei and Gross, Jonathan and Puschel, Markus},
-  booktitle={Acoustics, Speech and Signal Processing, 2008. ICASSP 2008. IEEE International Conference on},
-  pages={3537--3540},
-  year={2008},
-  organization={IEEE}
-}
-@article{Remya2016zc,
-  title={An Efficient Zadoff-Chu Based Communication System},
-  author={Remya B, Ashish Francis, Vimal Raj V},
-  journal={International Journal of Innovative Research in Electrical, Electronics, Instrumentation and Control Engineering},
-  volume={4},
-  number={9},
-  year={2016}
-}
-@article{hua2014analysis,
-  title={Analysis of the frequency offset effect on Zadoff--Chu sequence timing performance},
-  author={Hua, Min and Wang, Mao and Yang, Kristo Wenjie and Zou, Kingsley Jun},
-  journal={IEEE Transactions on Communications},
-  volume={62},
-  number={11},
-  pages={4024--4039},
-  year={2014},
-  publisher={IEEE}
-}
-@article{nasir2011blind,
-  title={Blind timing and carrier synchronisation in distributed multiple input multiple output communication systems},
-  author={Nasir, Ali A and Durrani, Salman and Kennedy, Rodney A},
-  journal={IET communications},
-  volume={5},
-  number={7},
-  pages={1028--1037},
-  year={2011},
-  publisher={IET}
-}
-@article{chen2010composite,
-  title={Composite interpolated fast Fourier transform with the Hanning window},
-  author={Chen, Kui Fu and Mei, Shu Li},
-  journal={IEEE Transactions on Instrumentation and Measurement},
-  volume={59},
-  number={6},
-  pages={1571--1579},
-  year={2010},
-  publisher={IEEE}
-}
-@techreport{gusella1985election,
-  title={An election algorithm for a distributed clock synchronization program},
-  author={Gusella, Riccardo and Zatti, Stefano},
-  year={1985},
-  institution={CALIFORNIA UNIV BERKELEY DEPT OF ELECTRICAL ENGINEERING AND COMPUTER SCIENCES}
-}
-@article{denic2017distributed,
-  title={Distributed Synchronization on Weakly Connected Networks},
-  author={Denic, Stojan and Georgiou, Orestis and Spagnolini, Umberto},
-  journal={IEEE Communications Letters},
-  year={2017},
-  publisher={IEEE}
-}
-@article{yoo2009fast,
-  title={Fast normalized cross-correlation},
-  author={Yoo, Jae-Chern and Han, Tae Hee},
-  journal={Circuits, Systems, and Signal Processing},
-  volume={28},
-  number={6},
-  pages={819--843},
-  year={2009},
-  publisher={Springer}
-}
-@article{barshan2000fast,
-  title={Fast processing techniques for accurate ultrasonic range measurements},
-  author={Barshan, Billur},
-  journal={Measurement Science and technology},
-  volume={11},
-  number={1},
-  pages={45},
-  year={2000},
-  publisher={IOP Publishing}
-}
-@article{baudoin1996teaching,
-  title={Teaching DSP through the practical case study of an FSK modem},
-  author={Baudoin, G and Virolleau, F and Venard, O and Jardin, P},
-  journal={ESIEE, Paris},
-  number={347},
-  year={1996}
-}
-@article{kang2012generalized,
-  title={Generalized cross-correlation properties of Chu sequences},
-  author={Kang, Jae Won and Whang, Younghoon and Ko, Byung Hoon and Kim, Kwang Soon},
-  journal={IEEE Transactions on Information Theory},
-  volume={58},
-  number={1},
-  pages={438--444},
-  year={2012},
-  publisher={IEEE}
-}
-@article{sacchi1998interpolation,
-  title={Interpolation and extrapolation using a high-resolution discrete Fourier transform},
-  author={Sacchi, Mauricio D and Ulrych, Tadeusz J and Walker, Colin J},
-  journal={IEEE Transactions on Signal Processing},
-  volume={46},
-  number={1},
-  pages={31--38},
-  year={1998},
-  publisher={IEEE}
-}
-@article{ferreira2015use,
-  title={On the use of perfect sequences and genetic algorithms for estimating the indoor location of wireless sensors},
-  author={Ferreira, M and Bagari{\'c}, J and Lanza-Gutierrez, Jose M and Priem-Mendes, Silvio and Pereira, JS and Gomez-Pulido, Juan A},
-  journal={International Journal of Distributed Sensor Networks},
-  volume={11},
+@article{chu1972polyphase,
+  title={Polyphase codes with good periodic correlation properties (corresp.)},
+  author={Chu, David},
+  journal={IEEE Transactions on information theory},
+  volume={18},
   number={4},
-  pages={720574},
-  year={2015},
-  publisher={SAGE Publications Sage UK: London, England}
+  pages={531--532},
+  year={1972},
+  publisher={IEEE}
 }
 @article{glover2011python,
   title={Python for audio signal processing},
   author={Glover, John C and Lazzarini, Victor and Timoney, Joseph},
   year={2011}
 }
-@article{luise2001guest,
-  title={Guest editorial-signal synchronization in digital transmission systems},
-  author={Luise, Marco and Mengali, Umberto and Moeneclaey, Marc and Proakis, John G and Strom, E and Tranter, William H},
-  journal={IEEE Journal on Selected Areas in Communications},
-  volume={19},
-  number={12},
-  pages={2293--2297},
-  year={2001},
-  publisher={IEEE}
+@inproceedings{gul2012robust,
+  title={Robust synchronization for OFDM employing Zadoff-Chu sequence},
+  author={Gul, Malik Muhammad Usman and Lee, Sungeun and Ma, Xiaoli},
+  booktitle={Information Sciences and Systems (CISS), 2012 46th Annual Conference on},
+  pages={1--6},
+  year={2012},
+  organization={IEEE}
 }
-@article{silverman1995effect,
-  title={The effect of transducer bandwidth on ultrasonic image characteristics.},
-  author={Silverman, Ronald H and Vinarsky, Emma and Woods, Suzanne M and Lizzi, Frederic L and Coleman, D Jackson},
-  journal={Retina},
-  volume={15},
-  number={1},
-  pages={37--42},
-  year={1995},
-  publisher={LWW}
+@article{kong2015robust,
+  title={Robust wireless signal indoor localization},
+  author={Kong, Liang and Bauer, Gavin and Hale, John},
+  journal={Concurrency and Computation: Practice and Experience},
+  volume={27},
+  number={11},
+  pages={2839--2850}
+}
+@article{zhang2013tdoa,
+  title={TDOA-based localization using interacting multiple model estimator and ultrasonic transmitter/receiver},
+  author={Zhang, Rui and Hoflinger, Fabian and Reindl, Leonhard},
+  journal={IEEE Transactions on Instrumentation}
 }
 @article{tripathy2015fourier,
   title={THE FOURIER TRANSFORM OF RECTANGULAR FUNCTION},
@@ -434,21 +324,34 @@
   year={2013},
   publisher={IEEE}
 }
-@article{jorge2015wireless,
-  title={Wireless Synchronization Preamble Detection Scheme Using Bispectra-Based Statistics in the Presence of Stationary Noise},
-  author={Jorge, Aguilar-Torrentera},
-  journal={Ingenier{\'\i}a, Investigaci{\'o}n y Tecnolog{\'\i}a},
-  volume={16},
+@article{gul2015timing,
+  title={Timing and frequency synchronization for OFDM downlink transmissions using Zadoff-Chu sequences},
+  author={Gul, Malik Muhammad Usman and Ma, Xiaoli and Lee, Sungeun},
+  journal={IEEE Transactions on Wireless Communications},
+  volume={14},
   number={3},
-  pages={383--390},
+  pages={1716--1729},
   year={2015},
-  publisher={Elsevier}
+  publisher={IEEE}
 }
-@inproceedings{alsharif2017zadoff,
-  title={Zadoff-Chu coded ultrasonic signal for accurate range estimation},
-  author={AlSharif, Mohammed H and Saad, Mohamed and Siala, Mohamed and Ballal, Tarig and Boujemaa, Hatem and Al-Naffouri, Tareq Y},
-  booktitle={Signal Processing Conference (EUSIPCO), 2017 25th European},
-  pages={1250--1254},
-  year={2017},
+@inproceedings{hsiao2008two,
+  title={Two practical considerations of beacon deployment for ultrasound-based indoor localization systems},
+  author={Hsiao, Chun-Chieh and Huang, Polly},
+  booktitle={Sensor Networks, Ubiquitous and Trustworthy Computing}
+}
+@article{onalaja2014ultra,
+  title={Ultra-wideband-based multilateration technique for indoor localisation},
+  author={Onalaja, Oladimeji and Adjrad, Mounir and Ghavami, Mohammad},
+  journal={IET Communications},
+  volume={8},
+  number={10}
+}
+@inproceedings{lazik2015ultrasonic,
+  title={Ultrasonic time synchronization and ranging on smartphones},
+  author={Lazik, Patrick and Rajagopal, Niranjini and Sinopoli, Bruno and Rowe, Anthony},
+  booktitle={Real-Time and Embedded Technology and Applications Symposium (RTAS), 2015 IEEE},
+  pages={108--118},
+  year={2015},
   organization={IEEE}
 }
+  
