--- a/Paper/references.bib
+++ b/Paper/references.bib
@@ -262,11 +262,13 @@
 }
 @article{xu2011performance,
   title={Performance of time-difference-of-arrival ultra wideband indoor localisation},
-  author={Xu, J and Ma, M and Law, CL},
+  author={Xu, Jie and Ma, Maode and Law, CL},
   journal={IET science, measurement \& technology},
   volume={5},
   number={2},
-  pages={46}
+  pages={46--53},
+  year={2011},
+  publisher={IET}
 }
 @article{chu1972polyphase,
   title={Polyphase codes with good periodic correlation properties (corresp.)},
@@ -297,12 +299,19 @@
   journal={Concurrency and Computation: Practice and Experience},
   volume={27},
   number={11},
-  pages={2839--2850}
+  pages={2839--2850},
+  year={2015},
+  publisher={Wiley Online Library}
 }
 @article{zhang2013tdoa,
   title={TDOA-based localization using interacting multiple model estimator and ultrasonic transmitter/receiver},
-  author={Zhang, Rui and Hoflinger, Fabian and Reindl, Leonhard},
-  journal={IEEE Transactions on Instrumentation}
+  author={Zhang, Rui and H{\"o}flinger, Fabian and Reindl, Leonhard},
+  journal={IEEE Transactions on Instrumentation and Measurement},
+  volume={62},
+  number={8},
+  pages={2205--2214},
+  year={2013},
+  publisher={IEEE}
 }
 @article{tripathy2015fourier,
   title={THE FOURIER TRANSFORM OF RECTANGULAR FUNCTION},
@@ -337,14 +346,20 @@
 @inproceedings{hsiao2008two,
   title={Two practical considerations of beacon deployment for ultrasound-based indoor localization systems},
   author={Hsiao, Chun-Chieh and Huang, Polly},
-  booktitle={Sensor Networks, Ubiquitous and Trustworthy Computing}
+  booktitle={Sensor Networks, Ubiquitous and Trustworthy Computing, 2008. SUTC'08. IEEE International Conference on},
+  pages={306--311},
+  year={2008},
+  organization={IEEE}
 }
 @article{onalaja2014ultra,
   title={Ultra-wideband-based multilateration technique for indoor localisation},
   author={Onalaja, Oladimeji and Adjrad, Mounir and Ghavami, Mohammad},
   journal={IET Communications},
   volume={8},
-  number={10}
+  number={10},
+  pages={1800--1809},
+  year={2014},
+  publisher={IET}
 }
 @inproceedings{lazik2015ultrasonic,
   title={Ultrasonic time synchronization and ranging on smartphones},
@@ -354,4 +369,179 @@
   year={2015},
   organization={IEEE}
 }
-  
+@article{segers2014ultrasonic,
+  title={Ultrasonic multiple-access ranging system using spread spectrum and MEMS technology for indoor localization},
+  author={Segers, Laurent and Tiete, Jelmer and Braeken, An and Touhafi, Abdellah},
+  journal={Sensors},
+  volume={14},
+  number={2},
+  pages={3172--3187},
+  year={2014},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+@inproceedings{alsharif2017zadoff,
+  title={Zadoff-Chu coded ultrasonic signal for accurate range estimation},
+  author={AlSharif, Mohammed H and Saad, Mohamed and Siala, Mohamed and Ballal, Tarig and Boujemaa, Hatem and Al-Naffouri, Tareq Y},
+  booktitle={Signal Processing Conference (EUSIPCO), 2017 25th European},
+  pages={1250--1254},
+  year={2017},
+  organization={IEEE}
+}
+@inproceedings{zivkovic2014zadoff,
+  title={Zadoff-Chu sequence based time-domain SNR estimation for OFDM systems},
+  author={Zivkovic, Milan and Mathar, Rudolf},
+  booktitle={Signal Processing Advances in Wireless Communications (SPAWC), 2014 IEEE 15th International Workshop on},
+  pages={110--114},
+  year={2014},
+  organization={IEEE}
+}
+@article{hyder2016zadoff,
+  title={Zadoff-Chu sequence design for random access initial uplink synchronization},
+  author={Hyder, Md Mashud and Mahata, Kaushik},
+  journal={arXiv preprint arXiv:1604.01476},
+  year={2016}
+}
+@article{remyaofdm,
+  title={OFDM Systems Using ZC Sequences},
+  author={Remya, B and Francis, Ashish}
+}
+@article{wangaidloc,
+  title={AIDLOC: AN ACCURATE ACOUSTIC INDOOR LOCALIZATION SYSTEM},
+  author={Wang, Zhi and Zhang, Lei and Lin, Feng and Huang, Danjie and Huang, Yifan}
+}
+@article{zhang2016compact,
+  title={Compact, real-time localization without reliance on infrastructure},
+  author={Zhang, Ji and Grabe, Volker and Hamner, Brad and Duggins, Dave and Singh, Sanjiv},
+  journal={The first place 3D entry},
+  year={2016}
+}
+@article{gunesintranav,
+  title={IntraNav--Low-Cost Indoor Localization \& Navigation System},
+  author={G{\""u}nes, Ersan and Ibarra, Gonzalo}
+}
+
+@article{liu2007survey,
+  title={Survey of wireless indoor positioning techniques and systems},
+  author={Liu, Hui and Darabi, Houshang and Banerjee, Pat and Liu, Jing},
+  journal={IEEE Transactions on Systems, Man, and Cybernetics, Part C (Applications and Reviews)},
+  volume={37},
+  number={6},
+  pages={1067--1080},
+  year={2007},
+  publisher={IEEE}
+}
+@inproceedings{priyantha2000cricket,
+  title={The cricket location-support system},
+  author={Priyantha, Nissanka B and Chakraborty, Anit and Balakrishnan, Hari},
+  booktitle={Proceedings of the 6th annual international conference on Mobile computing and networking},
+  pages={32--43},
+  year={2000},
+  organization={ACM}
+}
+@inproceedings{wobschall2010synchronization,
+  title={Synchronization of wireless sensor networks using a modified IEEE 1588 protocol},
+  author={Wobschall, Darold and Ma, Yuan},
+  booktitle={Precision Clock Synchronization for Measurement Control and Communication (ISPCS), 2010 International IEEE Symposium on},
+  pages={67--70},
+  year={2010},
+  organization={IEEE}
+}
+@inproceedings{lin2015mobile,
+  title={A mobile indoor positioning system based on iBeacon technology},
+  author={Lin, Xin-Yu and Ho, Te-Wei and Fang, Cheng-Chung and Yen, Zui-Shen and Yang, Bey-Jing and Lai, Feipei},
+  booktitle={Engineering in Medicine and Biology Society (EMBC), 2015 37th Annual International Conference of the IEEE},
+  pages={4970--4973},
+  year={2015},
+  organization={IEEE}
+}
+@inproceedings{zhou2009efficient,
+  title={An efficient least-squares trilateration algorithm for mobile robot localization},
+  author={Zhou, Yu},
+  booktitle={Intelligent Robots and Systems, 2009. IROS 2009. IEEE/RSJ International Conference on},
+  pages={3474--3479},
+  year={2009},
+  organization={IEEE}
+}
+@inproceedings{lee2013correlation,
+  title={On the correlation properties of generalized chirp-like sequences and their application},
+  author={Lee, Tae-Kyo and Yang, Kyeongcheol},
+  booktitle={Signal Design and Its Applications in Communications, The Sixth International Workshop on},
+  pages={88--91},
+  year={2013},
+  organization={IEEE}
+}
+@article{suehiro1988modulatable,
+  title={Modulatable orthogonal sequences and their application to SSMA systems},
+  author={Suehiro, Naoki and Hatori, Mitsutoshi},
+  journal={IEEE Transactions on Information Theory},
+  volume={34},
+  number={1},
+  pages={93--100},
+  year={1988},
+  publisher={IEEE}
+}
+@article{thomas2005revisiting,
+  title={Revisiting trilateration for robot localization},
+  author={Thomas, Federico and Ros, Llu{\'\i}s},
+  journal={IEEE Transactions on robotics},
+  volume={21},
+  number={1},
+  pages={93--101},
+  year={2005},
+  publisher={IEEE}
+}
+@article{srinivasan2007survey,
+  title={A survey on secure localization in wireless sensor networks},
+  author={Srinivasan, Avinash and Wu, Jie},
+  journal={Encyclopedia of Wireless and Mobile communications},
+  pages={126},
+  year={2007},
+  publisher={CRC Press, Taylor and Francis Group: Florida, USA}
+}
+@article{kapoor2016novel,
+  title={A novel 3D multilateration sensor using distributed ultrasonic beacons for indoor navigation},
+  author={Kapoor, Rohan and Ramasamy, Subramanian and Gardi, Alessandro and Bieber, Chad and Silverberg, Larry and Sabatini, Roberto},
+  journal={Sensors},
+  volume={16},
+  number={10},
+  pages={1637},
+  year={2016},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+@article{miao2016moving,
+  title={Moving sound source localization based on triangulation method},
+  author={Miao, Feng and Yang, Diange and Wen, Junjie and Lian, Xiaomin},
+  journal={Journal of Sound and Vibration},
+  volume={385},
+  pages={93--103},
+  year={2016},
+  publisher={Elsevier}
+}
+@article{yang2010quality,
+  title={Quality of trilateration: Confidence-based iterative localization},
+  author={Yang, Zheng and Liu, Yunhao},
+  journal={IEEE Transactions on Parallel and Distributed Systems},
+  volume={21},
+  number={5},
+  pages={631--640},
+  year={2010},
+  publisher={IEEE}
+}
+@inproceedings{filonenko2012asynchronous,
+  title={Asynchronous ultrasonic trilateration for indoor positioning of mobile phones},
+  author={Filonenko, Viacheslav and Cullen, Charlie and Carswell, James D},
+  booktitle={International Symposium on Web and Wireless Geographical Information Systems},
+  pages={33--46},
+  year={2012},
+  organization={Springer}
+}
+@article{tekdas2010sensor,
+  title={Sensor placement for triangulation-based localization},
+  author={Tekdas, Onur and Isler, Volkan},
+  journal={IEEE transactions on Automation Science and Engineering},
+  volume={7},
+  number={3},
+  pages={681--685},
+  year={2010},
+  publisher={IEEE}
+}
