--- a/Paper/report_template_1.tex
+++ b/Paper/report_template_1.tex
@@ -4,7 +4,7 @@
 \usepackage{subcaption}
 \usepackage{amsmath}
 \usepackage[backend=bibtex,% ← change to old BibTeX here if you really need it
-style=science,natbib=true,maxbibnames=99,firstinits=true]{biblatex}
+style=ieee,natbib=true,maxbibnames=99,firstinits=true]{biblatex}
 
 %%%%%%%%%%%%%%%%%%%%%%
 %%% Input project details\include{final_report.cls.C:/Users/Simon/Documents/College/Project/Paper/report_template}
